[package]
name = "rs-carv"
version = "0.1.0"
authors = ["OZ <normandiggs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
structopt = { version = "0.3", default-features = false }